--- a/View/src/app/components/shared/nav/nav.component.css
+++ b/View/src/app/components/shared/nav/nav.component.css
@@ -1,13 +1,4 @@
-.header {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-  background-color: #D5D5D5;
-}
-
-.header a {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  color: #333;
+.d-flex {
+  background-color: #f1f1f1;
+  padding: .5rem 1rem 0px .5rem;
 }
