--- a/View/src/app/components/shared/nav/nav.component.html
+++ b/View/src/app/components/shared/nav/nav.component.html
@@ -4,9 +4,10 @@
   </a>
 
   <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-    <a class="me-3 py-2 text-dark text-decoration-none" href="#">Sobre</a>
-    <a class="me-3 py-2 text-dark text-decoration-none" href="#">Produtos</a>
-    <a class="me-3 py-2 text-dark text-decoration-none" href="#">Suporte</a>
+    <a class="me-3 py-2 text-dark text-decoration-none" href="#">Categoria</a>
+    <a class="me-3 py-2 text-dark text-decoration-none" href="#">Autor</a>
+    <a class="me-3 py-2 text-dark text-decoration-none" href="#">Temporada</a>
+    <a class="me-3 py-2 text-dark text-decoration-none" href="#">Lançamento</a>
   </nav>
-  <a class="btn btn-outline-primary" href="#">Sign up</a>
+  <a class="btn btn-outline-primary" href="#">Resgistre-se</a>
 </div>
